--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.10",
+    "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.2.7",
@@ -18,34 +19,35 @@
     "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/telemetry": "^0.7.9",
-    "expo": "^52.0.0",
-    "expo-asset": "^11.0.4",
-    "expo-auth-session": "~5.5.2",
-    "expo-location": "~17.0.1",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^54.0.21",
+    "expo-asset": "~12.0.9",
+    "expo-auth-session": "~7.0.8",
+    "expo-location": "~19.0.7",
+    "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.8",
     "firebase": "^10.13.1",
     "i18next": "^23.15.1",
     "install": "^0.13.0",
     "intl-pluralrules": "^2.0.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-currency-formatter": "^1.1.0",
-    "react-dom": "^18.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-i18next": "^15.0.2",
-    "react-native": "0.74.5",
+    "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-heroicons": "^4.0.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "1.20.1",
     "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.6.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "^0.21.2",
     "react-redux": "^9.1.2",
     "reselect": "^5.1.1",
     "tailwind-rn": "^4.2.0"
